--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
     >
 
@@ -12,9 +11,10 @@
         android:id="@+id/main_tab"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        app:tabBackground="@color/colorPrimaryDark"
         app:tabMode="scrollable"
-        app:tabTextColor="#00ff00"
-        app:tabSelectedTextColor="#ff00ff"
+        app:tabSelectedTextColor="#6de4b9"
+        app:tabTextColor="#ffffff"
         />
 
     <android.support.v7.widget.RecyclerView
