--- a/app/src/main/res/layout/item_header_iamge.xml
+++ b/app/src/main/res/layout/item_header_iamge.xml
@@ -10,4 +10,10 @@
         android:layout_height="200dp"
         />
 
+    <TextView
+        android:id="@+id/header_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
