tab appearance change

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TabAppearance" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="textAllCaps">false</item>
+    </style>
+
 </resources>
