--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         app:tabBackground="@color/colorPrimaryDark"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="#6de4b9"
+        app:tabTextAppearance="@style/TabAppearance"
         app:tabTextColor="#ffffff"
         />
 
