--- a/app/src/main/res/layout/item_header_iamge.xml
+++ b/app/src/main/res/layout/item_header_iamge.xml
@@ -1,19 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:padding="10dp"
+    >
 
-    <ImageView
-        android:id="@+id/header_iamge"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
-        />
-
-    <TextView
-        android:id="@+id/header_desc"
+    <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        app:cardCornerRadius="5dp"
+        android:foreground="?attr/selectableItemBackground"
+        app:cardElevation="10dp"
+        >
+
+        <com.example.shrotbin.gankshrotybin.widget.RatioImageView
+            android:id="@+id/header_iamge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="bottom"
+            android:background="#806c6a6a"
+            >
+
+            <TextView
+                android:id="@+id/header_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textColor="#ffffff"
+                />
+        </FrameLayout>
+
+
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
