--- a/app/src/main/res/layout/item_header_iamge.xml
+++ b/app/src/main/res/layout/item_header_iamge.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/header_item"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="10dp"
+              android:visibility="invisible"
     >
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp"
         android:foreground="?attr/selectableItemBackground"
+        app:cardCornerRadius="5dp"
         app:cardElevation="10dp"
         >
 
-        <com.example.shrotbin.gankshrotybin.widget.RatioImageView
+        <ImageView
             android:id="@+id/header_iamge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
